syntax = "proto3";

package mnemosyne;

import public "timestamp.proto";

service RPC {
    rpc Get(GetRequest) returns (GetResponse) {};
    rpc List(ListRequest) returns (ListResponse) {};
    rpc Exists(ExistsRequest) returns (ExistsResponse) {};
    rpc Create(CreateRequest) returns (CreateResponse) {};
    rpc Abandon(AbandonRequest) returns (AbandonResponse) {};
    rpc SetData(SetDataRequest) returns (SetDataResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
}

// Token represents identifier of single session. It consist of partition key and a hash.
message Token {
    string key = 1;
    string hash = 2;
}

message Session {
    Token token = 1;
    map<string, string> data = 2;
    Timestamp expire_at = 3;
}

message GetRequest {
    Token token = 1;
}

message GetResponse {
    Session session = 1;
}

message ListRequest {
    int64 offset = 1;
    int64 limit = 2;
    Timestamp expire_at_from = 3;
    Timestamp expire_at_to = 4;
}

message ListResponse {
    repeated Session sessions = 1;
}

message ExistsRequest {
    Token token = 1;
}

message ExistsResponse {
    bool exists = 1;
}

message CreateRequest {
    map<string, string> data = 1;
}

message CreateResponse {
    Session session = 1;
}

message AbandonRequest {
    Token token = 1;
}

message AbandonResponse {
    bool abandoned = 1;
}

message SetDataRequest {
    Token token = 1;
    string key = 2;
    string value = 3;
}

message SetDataResponse {
    Session session = 1;
}

message DeleteRequest {
    Token token = 1;
    Timestamp expire_at_from = 2;
    Timestamp expire_at_to = 3;
}


message DeleteResponse {
    int64 count = 1;
}
